launchbear (1.0.4) UNRELEASED; urgency=medium

  * Use HTTPS for home page URLs.
  * Add .py file extensions.
  * Introduce a placeholder test suite.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 09 Nov 2019 09:34:54 +0000

launchbear (1.0.3) unstable; urgency=medium

  * Fix python2 dependency.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 18:08:52 +0000

launchbear (1.0.2) unstable; urgency=medium

  * Add README and license with the GPLv3.
  * Add manpages for the binaries.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 17:38:23 +0000

launchbear (1.0.1) unstable; urgency=medium

  * Fix dependency from python2 to python2.7

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 06 Jan 2018 20:30:09 +0000

launchbear (1.0.0) unstable; urgency=medium

  * Initial Release.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 06 Jan 2018 20:18:33 +0000