@@ -5,10 +5,12 @@ import unittest
 import launchbear
 
 
-class TestNothing(unittest.TestCase):
+class TestLaunchbear(unittest.TestCase):
 
-    def test_nothing(self):
-        pass
+    def test_corrupted_cache_files_are_handled(self):
+        # there are lots of ways they could be corrupt, just try empty:
+        cache = launchbear.load_cachefile(cache_path="/dev/null")
+        self.assertEqual(len(cache['generators']), 0)
 
 
 if __name__ == '__main__':
